objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Aliases__c</fullName>
        <label>Aliases</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Archived_Email_Address__c</fullName>
        <description>Archived Email Address</description>
        <label>Archived Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact&apos;s bad/bounced check flag</description>
        <label>NSF Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birth_City__c</fullName>
        <label>Birth City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Country__c</fullName>
        <label>Birth Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_of_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <description>This field is created to display Birth date in Read only mode</description>
        <formula>Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birth_State_Province__c</fullName>
        <label>Birth State / Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>It specify about the branch applicant belongs to</description>
        <label>Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_of_Military_Service__c</fullName>
        <label>Branch of Military Service?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Branch_of_Military_Service</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canadian_SIN__c</fullName>
        <description>This field is to store Canadian SIN of applicant</description>
        <label>Canadian SIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Mailed_Date__c</fullName>
        <description>Certificate Mailed Date</description>
        <label>Certificate Mailed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Certification_Number__c</fullName>
        <description>This field is to store Certification Number of the applicant</description>
        <label>Certification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <externalId>true</externalId>
        <label>Client_Id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>This field is to store Former name of the applicant</description>
        <label>Former Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Suffix__c</fullName>
        <label>Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Military_Service__c</fullName>
        <label>Country of Military Service?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_of_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOL_Notary_Commission_Name__c</fullName>
        <label>Licensee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOR_Response_Date__c</fullName>
        <description>TVS Response Date -- integration team</description>
        <label>DOR Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOR_Response_Description__c</fullName>
        <formula>CASE( DOR_Response__c, 
&apos;OK&apos;, &apos;Clear wo/ DOR Issue&apos;,
&apos;DR&apos;, &apos;Under DOR review&apos;,
&apos;IC&apos;, &apos;In Compliance&apos;,
&apos;CL&apos;, &apos;Cleared after Certified Delinquent&apos;,
&apos;HO&apos;, &apos;DOR Hearing Complete&apos;,
&apos;CD&apos;, &apos;Certified Delinquent&apos;,
&apos;HR&apos;, &apos;DOR Hearing Requested&apos;,
&apos;HD&apos;, &apos;DOR Hearing Complete&apos;,
&apos;HN&apos;, &apos;DOR Hearing Not Requested&apos;,
&apos;ID&apos;, &apos;ID not found&apos;,
&apos;NM&apos;, &apos;Name/ID Mismatch&apos;,
&apos;AA&apos;, &apos;Agency Informed Applicant they are Certified Delinquent&apos;,
&apos;NC&apos;, &apos;No Case w/ DOR&apos;,
&apos;IP&apos;, &apos;Invalid Parameters&apos;,
&apos;XX&apos;, &apos;Unknown DOR Code&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOR Response Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOR_Response__c</fullName>
        <description>DOR Values for TVS Response -- integration team</description>
        <label>DOR Response</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <description>Contact value to enter deceased date</description>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dedup_Id__c</fullName>
        <description>This is a key for deduping duplicates</description>
        <label>Dedup Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_s_License_Number__c</fullName>
        <description>Driver&apos;s License Number of the contact</description>
        <label>Driver&apos;s License Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if you want to override the Duplicate check.</description>
        <label>Duplicate Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_Military_Service__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Establishment_Name__c</fullName>
        <label>Establishment Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp;&quot; &quot;&amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Green_Card__c</fullName>
        <label>Green Card</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historic_Comments__c</fullName>
        <label>Historic Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Honorable_Discharge__c</fullName>
        <label>Honorable Discharge?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ITIN__c</fullName>
        <description>It is to store applicant ITIN number</description>
        <inlineHelpText>The Individual Taxpayer Identification Number is issued by the IRS only to individuals who are required to have a US taxpayer identification number but do not have and are ineligible to obtain a Social Security Number (SSN).</inlineHelpText>
        <label>ITIN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsContactRecordUpdatedForASC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsContactRecordUpdatedForASC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMasterContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used during the contact Merge process to mark a contact as a Master contact so that It cannot be merged in future with any other Contact</description>
        <label>IsMasterContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_4_Digits_of_SSN__c</fullName>
        <externalId>true</externalId>
        <label>Last 4 Digits of SSN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_4_Social__c</fullName>
        <label>Last 4 Social</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id of the record - Foreign Key used for Data Conversion</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id of the record - Foreign Key used for Data Conversion</inlineHelpText>
        <label>License ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Account_Relationship__c</fullName>
        <inlineHelpText>How the individual relates to the organization (Account)</inlineHelpText>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Shareholder</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <description>Contains the Code of the Alert 0 is no Alert.</description>
        <label>Alert Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE( 
CASE( MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;), 
&quot;none&quot;), &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Clear Alert Status after closing all open Alert Tasks</inlineHelpText>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__DBA_Name__c</fullName>
        <label>Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__SFId__c</fullName>
        <description>Used for contact upserts and ensuring less duplicates in Parcel Load Automation. SFId is the same as the contact ID minus the last 3 digits and can be used as an external id in upserts (the ID field cannot)</description>
        <externalId>true</externalId>
        <label>SFId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_or_Organization_Name__c</fullName>
        <label>Manufacturer or Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MergedSecuritycodes__c</fullName>
        <description>Merging contact details.</description>
        <label>MergedSecuritycodes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <description>Created for Delegated Agents and Act 198</description>
        <label>Municipality</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Establishment_Name__c</fullName>
        <label>Parent Establishment Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Communication__c</fullName>
        <description>Field to identify contact preferred method of communication</description>
        <label>Preferred Method of Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <label>Provider Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_No_SSN__c</fullName>
        <label>Reason for No SSN</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Foreign Applicant</fullName>
                </value>
                <value>
                    <fullName>Religious Objector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Release 1.0</fullName>
                </value>
                <value>
                    <fullName>Release 2.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <externalId>true</externalId>
        <label>Security Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Served_in_Military__c</fullName>
        <label>Served in Military?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social_Security_Number_Encrypted__c</fullName>
        <inlineHelpText>If you have a Social Security Number (SSN), you are required by federal and state law to provide it for use in child support enforcement programs (42 U.S.C. 666(a)(13) and RCW 74.20A.320). May also be used for identification of records with similar names.</inlineHelpText>
        <label>SSN</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Spouse_Served_in_the_Military__c</fullName>
        <label>Spouse Served in the Military?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Military_Service__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_of_residency__c</fullName>
        <description>This field is to display whether the applicant is resident of state or not</description>
        <label>State of residency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Resident</fullName>
                </value>
                <value>
                    <fullName>Non-resident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Still_Serving_in_Military__c</fullName>
        <label>Still Serving in Military?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <description>This field is to store supervisor name of the applicant</description>
        <label>Supervisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <label>Type of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sole proprietor</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBI_Number__c</fullName>
        <label>UBI #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <description>Captures the Universal Identifier Number</description>
        <label>UID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID_To_Provide__c</fullName>
        <label>Select Personal ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SSN</fullName>
                    <label>Social Security Number (SSN)</label>
                </value>
                <value>
                    <fullName>ITIN</fullName>
                    <label>Individual Taxpayer Identification Number (ITIN)</label>
                </value>
                <value>
                    <fullName>No_SSN_or_ITIN</fullName>
                    <label>I don&apos;t have an SSN or ITIN</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Washington_corporation_number__c</fullName>
        <label>Washington corporation number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>license_specific_email_addresses__c</fullName>
        <label>license specific email addresses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>license_specific_email_addresses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>security_code_length__c</fullName>
        <description>to updated security code- to be deleted after the update</description>
        <formula>len( Security_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>security code length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Social_Security_Number_Encrypted__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Converted_contacts2</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Social_Security_Number_Encrypted__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>dadmi</value>
        </filters>
        <label>Converted Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Verify_email_masking</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notContain</operation>
            <value>before1c1</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>notEqual</operation>
        </filters>
        <label>Verify email masking</label>
    </listViews>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_with_PII</fullName>
        <active>true</active>
        <description>Contact record type for layout with PII fields. Only used while creating records</description>
        <label>Contact with PII</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Birthday_Cannot_Be_Future</fullName>
        <active>true</active>
        <description>Birthday Cannot Be Future Date</description>
        <errorConditionFormula>(( Birthdate &gt;= TODAY()) || ((TODAY()-Birthdate) / 365.2425 &lt; 16)||(YEAR(Birthdate) &lt; 1800)) &amp;&amp; $User.Bypass_Validation_Workflow_Rules__c = FALSE &amp;&amp; $User.Is_Portal_User__c = FALSE</errorConditionFormula>
        <errorMessage>Birthdate must be in the past and Licensee should be 16yrs or older.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deceased_Date_Must_Be_In_the_Past</fullName>
        <active>true</active>
        <description>Deceased Date must be in the past</description>
        <errorConditionFormula>Deceased_Date__c &gt;  TODAY() &amp;&amp;  $User.Bypass_Validation_Workflow_Rules__c = FALSE &amp;&amp;  $User.Is_Portal_User__c = FALSE</errorConditionFormula>
        <errorMessage>Deceased date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MUSW__Contact_Relationship_missing</fullName>
        <active>false</active>
        <description>When Account is specified (and it isn&apos;t a Citizen, or having the same name as the Contact), account relationship is required</description>
        <errorConditionFormula>AND(ISPICKVAL(MUSW__Account_Relationship__c,&quot;&quot; ), NOT(ISBLANK(AccountId)), Account.Name != &quot;Citizen&quot; ,Account.Name != TRIM(IF(ISBLANK(TEXT(Salutation)), &quot;&quot;, TEXT(Salutation) + &quot; &quot;) + IF(ISBLANK(FirstName),&quot;&quot;, FirstName + &quot; &quot;) + IF(ISBLANK(MiddleName),&quot;&quot;, MiddleName + &quot; &quot;) + LastName + IF(ISBLANK(Suffix),&quot;&quot;,&quot; &quot; + Suffix)), MUSW__DBA_Name__c != Account.Name)</errorConditionFormula>
        <errorDisplayField>MUSW__Account_Relationship__c</errorDisplayField>
        <errorMessage>* Specify Contact Relationship to Account (or leave Account blank) *</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MUSW__Contact_Relationship_without_Account</fullName>
        <active>true</active>
        <description>When an account relationship is specified, but the account name is not filled in.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(MUSW__Account_Relationship__c,&quot;&quot; )), AccountId  = &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>* Specify which Account the Contact is related to (or leave Relationship blank) *</errorMessage>
    </validationRules>
</CustomObject>